fixing overflow post

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -23,8 +23,15 @@ body {
   background: var(--background);
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
+  margin: 0px;
+  padding: 0px;
 }
 
 html{
   scroll-behavior: smooth;
+}
+
+html, body {
+  height: 100%;
+  margin: 0;
 }
